--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Abigail Grace</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,6 +15,11 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -25,7 +30,167 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+<header>
+
+    <div class="content-wrapper">
+      <figure>
+        <a href="#">
+          <img class="logo" src="img/abigailgracelogo.png" alt="AG Logo" />
+        </a>
+      </figure>
+      <nav>
+        <ul>
+          <li><a href="#my-work">my work</a></li>
+          <li><a href="#lets-connect">let's connect</a></li>
+        </ul>
+      </nav>
+
+      <div class="hero-area">
+        <img src="img/hello-there.png" alt="Hello there" />
+        <h1>My name is Abigail.</h1>
+        <h2>Frontend Developer, Web Designer, & nap enthusiast</h2>
+      </div>
+
+
+  </div>
+
+</header>
+
+<main>
+
+<!--Mission Statement Section-->
+  <section class="mission-statement">
+    <div class="content-wrapper">
+      <!--<div class="blue-wave">
+        <img src="img/blue-wave.png" alt="Blue Wave">
+      </div>-->
+        <p>
+          My greatest joy is to support small businesses' dreams by creating and
+          designing incredible websites that will champion your businesses' unique
+          character, all the while making the process as fun and enjoyable as I
+          know it can be!
+        </p>
+
+    </div>
+  </section>
+
+<!-- C2A Section -->
+  <section class="call-to-action">
+    <div class="content-wrapper">
+      <img src="img/excited.png" alt="Excited?" />
+      <button type="button" onclick="location.href='#lets-connect'">let's work together!</button>
+    </div>
+  </section>
+
+<!-- Portfolio/Work Section -->
+  <section class="work">
+    <div class="content-wrapper">
+
+        <h2 id="my-work">check out my recent work</h2>
+
+        <div class="work-wrapper">
+          <div class="div-one">
+              <img src="img/unplugged-screenshot.png" alt="Unplugged Site" />
+              <h3>Unplugged</h3>
+              <p>
+               This site showcases practices like Responsive CSS
+                that makes your site enjoyable to experience on all screen sizes, from
+                mobile to desktop. <br>
+                (This site is not currently active.)
+              </p>
+          </div>
+          <div class="div-two">
+            <a href="https://mimibird113.github.io/jubilee-austen/" target="_blank">
+                <img src="img/jubilee-screenshot.png" alt="Jubilee Austen" />
+            </a>
+              <h3>Jubilee Austen</h3>
+              <p>
+                A practice portfolio project with a simple, one-page static interface using
+                HTML & CSS.
+              </p>
+          </div>
+          <div class="div-three">
+              <a href="https://www.melanieyodkins.com/" target="_blank">
+                <img src="img/myactingcoach-screenshot.png" alt="MAC site" />
+              </a>
+              <h3>Melanie Yodkins</h3>
+              <p>
+                A multi-page website I designed and then created using Squarespace for an online
+                acting coach that perfectly showcases her personality while also guiding her
+                clients to her programs.
+              </p>
+          </div>
+        </div>
+
+      </div>
+  </section>
+
+<!-- About Section -->
+  <section class="about">
+    <div class="content-wrapper">
+
+      <div class="polaroids">
+        <img src="img/polaroids-site.png" alt="Polaroids"/>
+      </div>
+      <div class="description">
+        <img src="img/my-name-hobbit.png" alt="My Name is"/>
+        <p>
+          In all ways except physical, I am a Hobbit. I am a homebody with a small streak
+          of adventure, but find I am most at peace with 4 things: a steaming cup of black
+          coffee, good food, good company, and good-tilled earth.
+        </p>
+      </div>
+
+    </div>
+  </section>
+
+</main>
+
+<footer>
+  <div class="content-wrapper">
+
+    <h2 id="lets-connect">let's connect</h2>
+    <p>abigailcarey9@gmail.com</p>
+
+      <div class="social">
+        <h3>social</h3>
+        <div class="social-icons">
+          <p>
+            <a href="https://github.com/Abigail-Carey" target="_blank"><img src="img/github.png" alt="github icon" /></a>
+          </p>
+          <p>
+            <a href="https://www.instagram.com/agcarey97/" target="_blank"><img src="img/instagram.png" alt="instagram icon" /></a>
+          </p>
+        </div>
+      </div>
+      <div class="coffee-icon">
+        <!--<a href="https://www.flaticon.com/free-icons/coffee" title="coffee icons">Coffee icons created by Freepik - Flaticon</a> -->
+      </div>
+
+  </div>
+<!--footer content wrapper ends here -->
+
+  <div class="copyright">
+    <p>Copyright 2022 | Abigail Grace Co.</p>
+  </div>
+
+</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--End Site Content-->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
