--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
               <p>
                This site showcases practices like Responsive CSS
                 that makes your site enjoyable to experience on all screen sizes, from
-                mobile to desktop. <br>
-                (This site is not currently active.)
+                mobile to desktop.
               </p>
           </div>
           <div class="div-two">
@@ -150,7 +149,7 @@
   <div class="content-wrapper">
 
     <h2 id="lets-connect">let's connect</h2>
-    <p>abigailcarey9@gmail.com</p>
+    <p>hello@abigailgracecode.com</p>
 
       <div class="social">
         <h3>social</h3>
@@ -171,7 +170,7 @@
 <!--footer content wrapper ends here -->
 
   <div class="copyright">
-    <p>Copyright 2022 | Abigail Grace Co.</p>
+    <p>Copyright 2022 | Abigail Grace Code</p>
   </div>
 
 </footer>
